--- a/gb/16/4/16/n7562026.md
+++ b/gb/16/4/16/n7562026.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mjerqg3317/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mjerqg3317/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mjerqg3317/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mjerqg3317/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mjerqg3317/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mjerqg3317/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>三天内两次强震 日本是如何撑下来的</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/04/GettyImages-521392338-600x400.jpg" />
 <h6>日本九州在三天内发生2次强震，其中16日凌晨的地震达7.3级。据日本媒体统计，两起强震已经造成至少41人死亡、逾千人受伤。作为地震多发国家，日本有一套完善的系统，做到减少地震带来的人员伤亡。 (Taro Karibe/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2016年04月16日讯】日本<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E4%B9%9D%E5%B7%9E.md#1">九州</a>在三天内发生2次<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E5%BC%BA%E9%9C%87.md#1">强震</a>，其中16日凌晨的<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>达7.3级。据日本媒体统计，两起<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E5%BC%BA%E9%9C%87.md#1">强震</a>已经造成至少41人死亡、逾千人受伤。据日本气象厅数据，16日的日本九州地震震源深度约12公里，属于浅层地震。此次地震震中位于陆地，震级高、震源浅，但目前造成的遇难者人数相对较少。近年在日本发生6级以上地震中，人员伤亡相比全球其他地区而言也都比较轻微。作为地震多发国家，日本是怎么做到减少地震带来的人员伤亡的？</p>
-<p><strong>日本建筑物对抗<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>的“好身板”</strong></p>
+	<p>【大纪元2016年04月16日讯】日本<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%9D%E5%B7%9E.md#1">九州</a>在三天内发生2次<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E9%9C%87.md#1">强震</a>，其中16日凌晨的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>达7.3级。据日本媒体统计，两起<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E9%9C%87.md#1">强震</a>已经造成至少41人死亡、逾千人受伤。据日本气象厅数据，16日的日本九州地震震源深度约12公里，属于浅层地震。此次地震震中位于陆地，震级高、震源浅，但目前造成的遇难者人数相对较少。近年在日本发生6级以上地震中，人员伤亡相比全球其他地区而言也都比较轻微。作为地震多发国家，日本是怎么做到减少地震带来的人员伤亡的？</p>
+<p><strong>日本建筑物对抗<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>的“好身板”</strong></p>
 <p>统计来看，地震灾害中近90%人员伤亡与建筑物倒塌破坏有关。提高房屋建筑抗震能力，是保护地震时民众安全的最直接措施。</p>
 <p><strong>1、日本建筑延续中华古建筑 尽显抗震性</strong></p>
 <p>中国传统的木结构建筑在抵抗地震冲击力时，采用的是“以柔克刚”的思维，通过种种巧妙的措施，其目标是以最小的代价，将强大的自然破坏力消弥至最小程度。中国许多古代建筑都成功地经受过大地震的考验，如天津蓟县独乐寺观音阁、山西应县木塔等建筑，千百年来均经历过多次地震仍然傲然屹立。</p>
@@ -15,13 +15,13 @@
 <p><strong>2、不允许任何建筑成为“楼脆脆”</strong></p>
 <p>日本是地震多发国家，在1995年经历阪神大地震后，日本从经验中累积教训，不断提升建筑物的结构标准。</p>
 <p>阪神大地震的同年，日本政府颁布了强制性建筑防震标准——《建筑基准法》，明确规定建筑必须能抵抗7级以上的强震，不允许任何建筑成为“楼脆脆”。</p>
-<p>1995年之后，日本新建筑均严格按照标准修建，老建筑也按照评估体系加固。经过10多年的努力，日本的房屋在地震中变得异常“坚挺”。2011年3月11日，日本东北地区发生里氏9.0级大地震，但被震毁的房屋屈指可数。日本国土交通省的统计报告显示，被毁的1.3万座房屋中，95%以上是被<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E6%B5%B7%E5%95%B8.md#1">海啸</a>摧毁的，因地震自身而坍塌的房屋少之又少。</p>
+<p>1995年之后，日本新建筑均严格按照标准修建，老建筑也按照评估体系加固。经过10多年的努力，日本的房屋在地震中变得异常“坚挺”。2011年3月11日，日本东北地区发生里氏9.0级大地震，但被震毁的房屋屈指可数。日本国土交通省的统计报告显示，被毁的1.3万座房屋中，95%以上是被<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%95%B8.md#1">海啸</a>摧毁的，因地震自身而坍塌的房屋少之又少。</p>
 <p>日本近年来还研究出地基设水槽、滑动体基础、弹簧地基、房缠“绷带”等多种新方法，让建筑物的抗震功能不断提升。当然，随着时间推移，建筑物抗震功能会有所下降。正因为这样，日本还非常留意给建筑物做定期“体检”，不断提高和完善建筑物的抗震功能。</p>
 <p><strong>完善的地震监测体系</strong></p>
-<p>以目前的技术水平，尽管地震难以准确预报，但地震发生时，如果有完善的监测网络发出警报，还是能为人们避险求生争取宝贵时间。此外，沿海地区的地震可能引发<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E6%B5%B7%E5%95%B8.md#1">海啸</a>，地震监测网络的预警也有助于减少海啸带来的生命、财产损失。</p>
+<p>以目前的技术水平，尽管地震难以准确预报，但地震发生时，如果有完善的监测网络发出警报，还是能为人们避险求生争取宝贵时间。此外，沿海地区的地震可能引发<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%95%B8.md#1">海啸</a>，地震监测网络的预警也有助于减少海啸带来的生命、财产损失。</p>
 <p>日本气象厅在全国约200个场所设置了地震监测站，日本防灾科学技术研究所在全国约800个场所设置了地震监测站，上千个监测站共同构成一个庞大的捕捉地震波的网络。一旦发生地震，有关部门立即分析由监测站传来的数据，推定震源和地震的规模，预测地震波到达各地的时间，并由气象厅迅速发布紧急地震速报。</p>
-<p>另外，日本气象厅预先设定有可能发生海啸的断层，对海啸的数值进行模拟演算，将演算结果作为海啸预测数据库进行积累。实际发生地震时，立即从数据库中检索与发生地震的位置和规模相对应的预测结果，迅速向沿海地区发出海啸警报。各地也都建设了比较完备的海啸预防体系以及用于避难和储备<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E6%95%91%E7%81%BE.md#1">救灾</a>物资的社区救灾中心。</p>
-<p><strong>日本整体<ahref="https://github.com/mjerqg3317/djy/blob/master/gb/tag/%E6%95%91%E7%81%BE.md#1">救灾</a>能力让世界叹服</strong></p>
+<p>另外，日本气象厅预先设定有可能发生海啸的断层，对海啸的数值进行模拟演算，将演算结果作为海啸预测数据库进行积累。实际发生地震时，立即从数据库中检索与发生地震的位置和规模相对应的预测结果，迅速向沿海地区发出海啸警报。各地也都建设了比较完备的海啸预防体系以及用于避难和储备<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%91%E7%81%BE.md#1">救灾</a>物资的社区救灾中心。</p>
+<p><strong>日本整体<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%95%91%E7%81%BE.md#1">救灾</a>能力让世界叹服</strong></p>
 <p>在救灾法律法规体系当中，日本最基本的法律就是于1961年开始实施的《灾害对策基本法》。该法律涵盖防灾组织、防灾计划、灾害预防、灾害应急对策以及灾后重建等各个领域，确立了中央和地方政府以及其他公共组织关于地震等灾害预防的责任，从制定防灾计划、灾害预防、灾害应急对策，直到灾后重建时实施的财政金融措施以及其他必要的灾害对策的基本措施，都有相应规定。这部法律的实施，全方位、有计划地推进了日本的防灾行政。</p>
 <p>在2011年日本遭受大地震、超强海啸及核泄漏事件酿成的复合型灾难。即使如此，这套救灾体系也体现了反应快速、专业化程度较高、组织实施有序、民众自救能力较强等特点。日本整体救灾能力让世界叹服：先后动员10万名自卫队员，6500名预备役人员和1128支紧急消防援助队投入抢险救灾，灾后三天内搜救出1.5万名幸存者，并将55万名受灾者疏散到2100个避难所。</p>
 <p>日本建立了一套救灾物资的储备和运输体系，确保灾民在灾后能及时获取必要的救急物资。首先，鼓励每个家庭在家中储备救灾物资，存放能够维持一家人三天到一周的饮用水和食品。其次，在各个自治体建立救灾物资储备中心或储备点，储备帐篷、被褥、发电机及燃料、手电和食品等应急物资，该地区一旦发生灾情就可以及 时就地发放，保证灾民的生活必需。</p>
@@ -38,41 +38,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/3/11/n4659727.md#1">311震灾5周年  福岛举办追悼纪念</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/3/11/n4660474.md#1">311灾民 还有12万人住组合屋</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/3/12/n4660544.md#1">女儿来台意外身亡 日本父亲替她“谢台湾”</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/4/4/n7519893.md#1">日本“小”地震吓坏中国观光客</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/11/n4659727.md#1">311震灾5周年  福岛举办追悼纪念</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/11/n4660474.md#1">311灾民 还有12万人住组合屋</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/12/n4660544.md#1">女儿来台意外身亡 日本父亲替她“谢台湾”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/4/n7519893.md#1">日本“小”地震吓坏中国观光客</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/27/n12716001.md#1">【财商天下】拜登能源新政 三大影响谁受益？</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/27/n12716462.md#1">【秦鹏直播】德州受够了？议员提独立公投法案</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/28/n12717063.md#1">【西岸观察】拜登要动最高院 德州酿公投独立</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/25/n12711517.md#1">大陆山寨版IU爆红 真实相貌曝光惊呆网友</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12711861.md#1">川普在佛州设立第45任总统办公室</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/25/n12711660.md#1">【秦鹏直播】选拜登的人后悔了？习色厉内荏</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/25/n12711517.md#1">大陆山寨版IU爆红 真实相貌曝光惊呆网友</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/27/n12715248.md#1">刘乐妍涉贿选3度不到庭 检察官建议发通缉令</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/27/n12714202.md#1">周润发夫妇恩爱日常曝光 吵架总是发哥认错</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12712782.md#1">被中国论坛传外遇 周杰伦：要黑也不看看对象</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12711753.md#1">武汉封城周年零热搜 袁弘帖文钓出被噤声内幕</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12712763.md#1">英国睡眠专家：用一颗网球可停止打鼾</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12712049.md#1">用餐时别吃下新冠病毒！2关键给食物灭毒</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/26/n12712014.md#1">【重播】无症状感染者潜藏危机？教你自保法</a></li>
-<li><a href="https://github.com/mjerqg3317/djy/blob/master/gb/21/1/25/n12711730.md#1">变种病毒症状有2大改变 感染人群也变化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mjerqg3317/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mjerqg3317/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/16/n7562026.htm">三天内两次强震 日本是如何撑下来的</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/16/n7562026.htm">三天内两次强震 日本是如何撑下来的</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjerqg3317/djy/blob/master/gb/16/4/16/n7562026.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mjerqg3317/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mjerqg3317/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mjerqg3317/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mjerqg3317/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/4/16/n7562026.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
